# getrid

./: NOTACITIZEN.xml  meson.build  slay.yass.triakr.eid.json
data/: meson.build  slay.yass.triakr.eid.appdata.xml.in  slay.yass.triakr.eid.desktop.in  slay.yass.triakr.eid.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  getrid.gresource.xml  img_base64.txt  main.vala  meson.build  model.vala  window.ui  window.vala
